# ragn

./: .gitignore  Dockerfile  pyproject.toml  ragn_config.yaml  run_testing.py  run_training.py  run_training_.py
ragn/: data.py  draw.py  gn_modules.py  metrics.py  policy.py  ragn.py  snt_modules.py  testing.py  tf_utils.py  train.py  training.py  utils.py  utils_mlf.py
scripts/: add_features_to_graphs.py  ragn_config.yaml  run_test_eval.py  run_testing.py  run_training.py  split_data.py
scripts/data/: train
tests/: __init__.py  test_ragn.py
