[tool.poetry]
name = "ragn"
version = "0.1.0"
description = ""
authors = ["Caio Dadauto <caiodadauto@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.10"
graph-nets = {git = "https://github.com/caiodadauto/graph_nets.git", rev = "feature/recurrent_blocks"}
tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}
tensorflow-probability = "^0.25.0"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
mlflow = "^2.17.2"
numba = "^0.60.0"
hydra-core = "^1.3.2"
seaborn = "^0.13.2"
prettytable = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
